Extract ProcessLauncher